update the jdk